chore: publish config

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "build": "tsc"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "license": "MIT",
   "dependencies": {
